--- a/HappyWayApp/appsettings.json
+++ b/HappyWayApp/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "Database": {
     "ConnectionString": "Filename=HappyWayApp.db"
-  }
+  },
+  "GoogleSheets": {
+    "ApiKey": ""
+  } 
 }
