--- a/HappyWayApp/appsettings.json
+++ b/HappyWayApp/appsettings.json
@@ -10,7 +10,10 @@
   "Database": {
     "ConnectionString": "Filename=HappyWayApp.db"
   },
+  "Auth": {
+    "Secret": "FDAJFOJAPOHJIOFJP!%PF{JP{A555sfahaFVbzn4as3b|aAFAAAF33256hw6g"
+  },
   "GoogleSheets": {
-    "ApiKey": ""
-  } 
+    "ApiKey": "AIzaSyDQPYmK7S-nFpI3UpMnrCCp6AvBn5rAJKw"
+  }
 }
