--- a/HappyWayApp/ClientApp/package.json
+++ b/HappyWayApp/ClientApp/package.json
@@ -27,9 +27,8 @@
     "aspnet-prerendering": "^3.0.1",
     "core-js": "^3.3.3",
     "jquery": "3.4.1",
-    "ng-block-ui": "^2.1.8",
-    "ngx-clipboard": "^12.3.0",
-    "oidc-client": "^1.9.1",
+    "ng-block-ui": "^3.0.0-beta.6",
+    "ngx-clipboard": "^13.0.0",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
