--- a/HappyWayApp/ClientApp/package.json
+++ b/HappyWayApp/ClientApp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "happywayapp",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -12,48 +12,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.0.2",
-    "@angular/cdk": "~9.1.0",
-    "@angular/common": "9.0.2",
-    "@angular/compiler": "9.0.2",
-    "@angular/core": "9.0.2",
-    "@angular/forms": "9.0.2",
-    "@angular/material": "^9.1.0",
-    "@angular/platform-browser": "9.0.2",
-    "@angular/platform-browser-dynamic": "9.0.2",
-    "@angular/platform-server": "9.0.2",
-    "@angular/router": "9.0.2",
-    "@nguniversal/module-map-ngfactory-loader": "8.1.1",
-    "aspnet-prerendering": "^3.0.1",
+    "@angular/animations": "10.0.2",
+    "@angular/cdk": "~10.0.1",
+    "@angular/common": "10.0.2",
+    "@angular/compiler": "10.0.2",
+    "@angular/core": "10.0.2",
+    "@angular/forms": "10.0.2",
+    "@angular/material": "^10.0.1",
+    "@angular/platform-browser": "10.0.2",
+    "@angular/platform-browser-dynamic": "10.0.2",
+    "@angular/platform-server": "10.0.2",
+    "@angular/router": "10.0.2",
     "core-js": "^3.3.3",
-    "jquery": "3.4.1",
-    "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.3",
-    "@angular/cli": "9.0.3",
-    "@angular/compiler-cli": "9.0.2",
-    "@angular/language-service": "9.0.2",
+    "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular/cli": "10.0.0",
+    "@angular/compiler-cli": "10.0.2",
+    "@angular/language-service": "10.0.2",
     "@types/jasmine": "~3.4.4",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "typescript": "3.7.5"
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "typescript": "3.9.5"
   },
   "optionalDependencies": {
     "node-sass": "^4.12.0",
-    "protractor": "~5.4.2",
+    "protractor": "~7.0.0",
     "ts-node": "~8.4.1",
-    "tslint": "~5.20.0"
+    "tslint": "~6.1.0"
   }
 }
