--- a/HappyWayApp.Persistence/HappyWayApp.Persistence.csproj
+++ b/HappyWayApp.Persistence/HappyWayApp.Persistence.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="15.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.5" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.5" />
   </ItemGroup>
